# showtrials-tcc

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .ruff.toml  404.html  README.md  app.py  config.yaml  db.py  diagnostico_legado.sh  estrutura-atual  estrutura_atual.txt  extractor.py  index.html  limpeza_final.sh  mkdocs.yml  nav.py  nav_ui.py  navegador.py  objects.inv  pyproject.toml  run.py  test_tradutor.py  titulos_com_ids.txt  web_run.py
.github/workflows/: ci.yml
ARCHITECTURE/: index.html
FASE10_SERVICE_REGISTRY/: index.html
FASE1_DOMAIN/: index.html
FASE2_APPLICATION/: index.html
FASE3_INFRASTRUCTURE/: index.html
FASE4_CLI/: index.html
FASE5_TRADUCAO/: index.html
FASE6_EXPORTACAO/: index.html
FASE7_RELATORIOS/: index.html
FASE8_ANALISE_TEXTO/: index.html
FASE9_WEB_INTERFACE/: index.html
changelog/: index.html
coletores/: info.md
coletores/livro_lenin/: coleta_livro.py  debug_extractor.py  extractor_livro.py
contributing/: index.html
docs/: ARCHITECTURE.md  FASE10_SERVICE_REGISTRY.md  FASE16.md  FASE1_DOMAIN.md  FASE2_APPLICATION.md  FASE3_INFRASTRUCTURE.md  FASE4_CLI.md  FASE5_TRADUCAO.md  FASE6_EXPORTACAO.md  FASE7_RELATORIOS.md  FASE8_ANALISE_TEXTO.md  FASE9_WEB_INTERFACE.md  changelog.md  cobertura.md  contributing.md  index.md  overview.md  quality.md
docs/ai/: 00_project_context.md  01_architecture.md  02_governance.md  03_current_state.md  05_session_handoff.md  06_git_history.md  07_sources_examined.md  08_quality_and_ci.md  09_operational_status.md  10_modelagem_contexto_consolidado.md
docs/fases/: FASE01_FUNDACAO_DA_CAMADA_DE_DOMINIO.md  FASE02_FUNDACAO_DA_CAMADA_DE_APLICACAO.md  FASE03_FUNDACAO_DA_CAMADA_DE_INFRAESTRUTURA.md  FASE04_FUNDACAO_DA_INTERFACE_CLI.md  FASE05_INTRODUCAO_DO_SUBSISTEMA_DE_TRADUCAO.md  FASE06_INTRODUCAO_DO_SUBSISTEMA_DE_EXPORTACAO.md  FASE07_INTRODUCAO_DO_SUBSISTEMA_DE_RELATORIOS.md  FASE08_INTRODUCAO_DO_SUBSISTEMA_DE_ANALISE_DE_TEXTO.md  FASE09_INTRODUCAO_DA_INTERFACE_WEB.md  FASE10_INTRODUCAO_DO_SERVICE_REGISTRY_E_DO_LAZY_LOADING.md  FASE10_SERVICE_REGISTRY.md  FASE11_CI.md  FASE11_ESTABILIZACAO_INICIAL_DO_CI.md  FASE12.md  FASE12_PADRONIZACAO_DA_TELEMETRIA_EM_TIPODOCUMENTO.md  FASE13.md  FASE13_LIMPEZA_E_ORGANIZACAO_DO_REPOSITORIO.md  FASE14.md  FASE14_TELEMETRIA_E_TESTES_EM_EXPORTAR_DOCUMENTO.md  FASE15.md  FASE15_TELEMETRIA_E_TESTES_EM_GERAR_RELATORIO.md  FASE16.md  FASE16_TELEMETRIA_E_EXPANSAO_DE_TESTES_EM_LISTAR_DOCUMENTOS.md  FASE17.md  FASE17_PRIMEIRA_REORGANIZACAO_DOCUMENTAL_AMPLA.md  FASE18_CONSOLIDACAO_DA_GOVERNANCA.md  FASE19_CONSOLIDACAO_DO_FLUXO_DE_QUALIDADE.md  FASE1_DOMAIN.md  FASE2_APPLICATION.md  FASE3_INFRASTRUCTURE.md  FASE4_CLI.md  FASE5_TRADUCAO.md  FASE6_EXPORTACAO.md  FASE7_RELATORIOS.md  FASE8_ANALISE_TEXTO.md  FASE9_WEB_INTERFACE.md
docs/flows/: GOVERNANCA.md  automacao_operacional_com_taskipy.md  code_review_flow.md  debug_flow.md  dependencies_flow.md  documentation_flow.md  emergency_flow.md  fluxo_issue6_quality_pipeline.md  fluxo_projects_github_cli.md  git_flow.md  guia_de_atualizacao_do_changelog.md  guia_de_auto_revisao.md  guia_de_correcao_urgente.md  guia_de_debug.md  guia_de_dependencias.md  guia_de_documentacao_do_projeto.md  guia_de_manutencao_do_site_documental.md  guia_de_refatoracao.md  guia_de_telemetria.md  guia_github_projects_cli.md  politica_de_governanca.md  protocolo_de_git.md  protocolo_de_qualidade.md  quality_flow.md  refactoring_flow.md  telemetry_flow.md
docs/guias/: automacao_operacional_com_taskipy.md  guia_de_atualizacao_do_changelog.md  guia_de_auto_revisao.md  guia_de_correcao_urgente.md  guia_de_debug.md  guia_de_dependencias.md  guia_de_documentacao_do_projeto.md  guia_de_manutencao_do_site_documental.md  guia_de_refatoracao.md  guia_de_telemetria.md  guia_github_projects_cli.md
docs/metricas/: cobertura.md  cobertura_v2.md  diagnostico_ci.md  diagnostico_fase12.md
docs/modelagem/: 02_formalizacao_da_frente_no_projeto.md  03_documento_de_requisitos.md  07_casos_de_uso_iniciais.md  08_diagrama_casos_de_uso_sistema_atual.md  17_drivers_arquiteturais.md  (+42 more)
exportados/: 172_Протокол допроса БЛ Браво.txt  1_Протокол допроса ЛВ Николаева.txt  1_Протокол допроса ЛВ Николаева_traducao_en.txt  2_Протокол допроса ЛВ Николаева_original.txt  2_Протокол допроса ЛВ Николаева_traducao_en.txt  2_Протокол_допроса_Л.В._Николаева.txt
legacy/: app.py  coleta.py  db.py  extractor.py  nav_ui.py  translator.py
overview/: index.html
scripts/: diagnostico.sh  diagnostico_ci.sh  diagnostico_limpeza.sh  migrar_dados_existentes.py  reprocessar_metadados.py  verificar_fases.py
search/: search_index.json
tests/: test_registry.py
translators/: nomes.py
ui/: __init__.py  console.py  theme.py
(+654 files in other folders)
