[tool.poetry]
name = "coleta-showtrials"
version = "0.2.0"
description = "Sistema de coleta, gestão e tradução de documentos históricos"
authors = ["Thiago Ribeiro <mackandalls@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]  # <-- ADICIONAR ESTA LINHA!

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
requests = ">=2.32.5"
beautifulsoup4 = ">=4.14.3"
lxml = ">=6.0.2"
rich = ">=13.7.0"
google-cloud-translate = ">=3.0.0"
python-dotenv = ">=1.0.0"
pytest = ">=9.0.0"  # <-- ADICIONAR PARA TESTES
fastapi = "^0.129.0"
uvicorn = "^0.40.0"
jinja2 = "^3.1.6"
aiofiles = "^25.1.0"
python-multipart = "^0.0.22"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
isort = "^7.0.0"
ruff = "^0.15.1"
pre-commit = "^4.5.1"
pytest-cov = "^7.0.0"
mkdocs = "^1.6.1"
mkdocstrings = "^1.0.3"
mkdocs-material = "^9.7.1"
mkdocstrings-python = "^2.0.2"
commitizen = "^4.13.7"
taskipy = "^1.14.1"
mypy = "^1.19.1"
types-pyyaml = "^6.0.12.20250915"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]  # <-- ADICIONAR PARA TESTES!
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 120
exclude = [
  "legacy/*",
  "backup_*",
  "diagnostico_*",
  ".git",
  "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E402", "F841"]

[tool.mypy]
python_version = "3.12"
strict_optional = true

[[tool.mypy.overrides]]
module = [
  "wordcloud.*",
  "textblob.*",
  "google.*"
]
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"

[tool.taskipy.tasks]
# === Qualidade ===
lint = "ruff check src"
type = "mypy src"
format = "black src && isort src"
quality = "task lint && task type"

# === Testes ===
test = "pytest src/tests -v"
test-cov = "pytest src/tests --cov=src --cov-report=term-missing --cov-report=xml:coverage.xml --cov-fail-under=45"
test-html = "pytest src/tests --cov=src --cov-report=html"

# === Telemetria ===
metrics = "python -c 'from src.infrastructure.telemetry import telemetry; telemetry.flush()'"
monitor = "task test && task metrics"

# === Execução ===
run-cli = "python run.py"
run-web = "python web_run.py"

# === Manutenção ===
clean = "find . -type d -name __pycache__ -exec rm -rf {} + && find . -name '*.pyc' -delete"
docs = "mkdocs serve"

# === Tudo junto ===
check = "task lint && task type && task test"
pre-push = "task check && task test-cov"
help = "task --list"
